--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -830,7 +830,7 @@
     "delete_item": "حذف عنصر",
     "item_save_success": "تم حفظ العنصر في الثلاجة!",
     "know_tips_title": "هل كنت تعلم؟",
-    "food_mgn_add_item_tips": "يمكن تخزين هذا العنصر في (٪s) لمدة تصل إلى ٪d أيام.",
+    "food_mgn_add_item_tips": "يمكن تخزين هذا العنصر في (%s) لمدة تصل إلى %d أيام.",
     "picker_title_position": "موضع",
     "screen_found_multiple_appliance": "تم العثور على أجهزة متعددة ، يرجى إيقاف تشغيل \"تكوين وضع الشبكة\" للأجهزة التي لا تحتاجها.",
     "delete_account_success_hint": "عزيزي المستخدم ، تم حذف معلوماتك الشخصية من الخادم.",
@@ -4244,5 +4244,19 @@
     "CL_CF_CP_friday": "جمعة",
     "CL_CF_CP_saturday": "السبت",
     "CL_CF_CP_sunday": "الأحد",
-    "CL_DV_OV_delay_start_end_desc": "يمكنك تأخير برنامج الطهي عن طريق تحديد وقت البدء أو وقت الانتهاء المفضل لديك. بمجرد اختيار أحدهما، سيتم حساب الآخر تلقائيًا."
+    "CL_DV_OV_delay_start_end_desc": "يمكنك تأخير برنامج الطهي عن طريق تحديد وقت البدء أو وقت الانتهاء المفضل لديك. بمجرد اختيار أحدهما، سيتم حساب الآخر تلقائيًا.",
+    "drink_inventory": "مخزون المشروبات",
+    "ac_statistice_content": "تستند هذه البيانات الإحصائية إلى إحصاءات الشبكة ، ويستند جزء من البيانات إلى ظروف المختبر التي تم قياسها ، فقط للرجوع إليها من قبل المستخدم.",
+    "CL_CF_FM_x_items_selected": "*** العناصر المحددة",
+    "CL_CF_FM_remove_items": "إزالة العناصر",
+    "p_try_again": "من فضلك حاول مرة أخرى",
+    "exit_report_i": "مشكلة الإبلاغ عن الخروج",
+    "AW": "أروبا",
+    "CL_DV_OV_extra_fast_cool_detail_desc": "قم بخفض درجة الحرارة داخل الفرن بسرعة بعد انتهاء الطهي أو بين طهي أطباق مختلفة.",
+    "CL_CF_CS_ble_scan_not_list_2": "إذا لم يكن جهازك مدرجًا في القائمة، فيمكنك النقر فوق \"محاولة مرة أخرى\" للكشف عنه عبر البلوتوث مرة أخرى.",
+    "CL_CF_CS_ble_scan_another_way": "تكوين بطريقة أخرى",
+    "CL_CF_CS_ble_scan_have_found": "لقد وجدنا أجهزة عبر البلوتوث. حدد جهازك لتكوينه.",
+    "pump_holiday_start_time_greater_one_day": "يجب أن يكون إعداد وضع عطلة أكبر من 1 يوم!",
+    "CL_CF_FM_food_type": "نوع الطعام",
+    "CL_CF_FM_add_food_from_lib": "أضف طعامًا من المكتبة"
 }
