--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -2475,7 +2475,7 @@
     "selected_language_is_not_supported": "所选语言不支持",
     "wash_phase_ai": "智能检测中...",
     "add_devices_to_the_room": "將設備加入房間",
-    "delete_room": "删除房間",
+    "delete_room": "刪除房間",
     "done": "完成",
     "add_devices_title": "添加設備",
     "looking_for_manuals": "查找用戶手冊中…",
@@ -2601,7 +2601,7 @@
     "fridge_var_room_over_temp_alarm": "变温室温度正常",
     "fridge_evaporator_sensor": "xxxxx蒸发器传感器",
     "fridge_open_door_alarm": "xxxxx门打开和关闭",
-    "fridge_room_over_temp_alarm": "您的xxxxx的温度",
+    "fridge_room_over_temp_alarm": "你的xxxxx的溫度",
     "update_now": "现在更新",
     "hour_f_d": "小時",
     "interior_light_at_power_off": "斷電時車內燈亮",
@@ -2790,7 +2790,7 @@
     "ac_mixed": "混合",
     "faq_fullname": "經常問的問題",
     "hi_ser": "帮助和支持",
-    "all_room": "所有房间",
+    "all_room": "所有房間",
     "ble_ota_step_succ": "升级成功。您的 ##已升级到最新软件。点击按钮完成操作。",
     "update_complete": "更新完成",
     "wine_three_remote_o": "1.点击酒柜屏幕上的<b>wine_image_add_icon</b> 按钮。",
@@ -2860,24 +2860,24 @@
     "app_update_title": "應用程式更新",
     "air_care": "智能空淨",
     "not_good": "不佳",
-    "vir_3d": "3D房间视图",
+    "vir_3d": "3D虛擬房間",
     "no_device": "无设备可优化",
     "all_offline": "设备已离线",
     "optimizing_tips": "请先停止优化",
     "label_list_title": "選擇一個計劃來優化你的空調",
     "how_use_air_care": "如何使用智能空净",
-    "how_manager_room": "如何管理你的房间",
+    "how_manager_room": "如何管理你的房間",
     "how_select_mode": "如何选择预设模式",
-    "user_content_1": "为空气产品引入新的场景功能，使用户能够监控天气状况、优化室内空气质量、创建 3D 房间视图并接收自动化建议。此外，您还可以访问空气产品和智能空净的使用提示。",
+    "user_content_1": "為空氣產品引入新的場景功能，使用戶能夠監控天氣狀況、優化室內空氣品質、建立 3D 房間視圖並接收自動化建議。此外，您還可以獲得空氣產品和空氣護理場景的使用提示。",
     "user_content_2": "添加空气处理产品后，程序主页和设备主页上都会方便地显示专用的“智能空净”入口，供用户轻松访问。",
-    "manage_content_1": "添加新的空气设备后，可以轻松获得舒适的房间。",
+    "manage_content_1": "添加新的空氣處理裝置後，輕鬆生成合適的房間。",
     "manage_content_2": "要編輯或創建房間，請點擊設備列表頁面上的“管理房間”條目。",
     "manage_content_3": "探索Air Care場景，以3D形式可視化房間，並通過點擊它們來檢查每個房間的空氣狀態。",
     "manage_content_4": "通過添加新的樓層，無縫管理房間，使您可以在樓層之間切換，查看各種房間和設備。",
     "select_content_1": "每個房間的初始預設模式都設定為“通用”。點擊“通用”可以切換到其他模式，如寵物、兒童、老人或運動模式。",
     "select_content_2": "每種模式都配有預設的設備參數，這些參數針對特定的房間屬性進行了定制。點擊“編輯”以自定義參數，或點擊“重置”以恢復到初始設置。",
     "stop_optimizing": "停止优化并关闭设备?",
-    "all_stop": "激活此房间的优化将停止所有房间的优化。",
+    "all_stop": "啟動該房間的優化將停止所有正在進行的房間的最佳化。",
     "not_all_stop": "开始优化将停止正在进行的优化。您确定要继续吗？",
     "air_care_suitable": "舒適",
     "energy_consumption": "能源消耗",
@@ -2925,7 +2925,7 @@
     "air_care_elder_des": "自动优化适宜老人的环境",
     "air_care_tips_title": "您知道嗎",
     "air_care_tips_content_1": "當房間狀態不佳時，點擊“開始”以優化房間狀態至“良好”。",
-    "air_care_tips_content_2": "点击3D房间可以切换房间卡。",
+    "air_care_tips_content_2": "點擊3D房間可以切換房卡。",
     "air_care_tips_content_3": "输入用于优化的参数设置。",
     "error_sycronizing_your_device": "同步您的裝置時發生錯誤。",
     "error_cause_missing_data": "設備出現錯誤。這可能會導致資料遺失。",
@@ -2971,52 +2971,52 @@
     "confirm_tv_network_connected": "請確認您的手機和電視連接到同一個WIFI。",
     "up_to_x_at_most": "已选择***项！",
     "look_for_devices_near_you": "查找附近的設備",
-    "room_manage_room_list_key": "房间列表",
-    "room_manage_3d_rooms_key": "3D房间",
+    "room_manage_room_list_key": "房間清單",
+    "room_manage_3d_rooms_key": "3D 房間",
     "room_type_living_room": "客廳",
     "room_type_bed_room": "臥室",
     "room_type_wine_cellar_room": "酒窖",
-    "room_type_kitchen_room": "厨房",
-    "room_type_dinning_room": "餐厅",
+    "room_type_kitchen_room": "廚房",
+    "room_type_dinning_room": "餐廳",
     "room_type_bath_room": "浴室",
     "room_type_laundry_room": "洗衣房",
-    "room_type_balcony_room": "阳台",
-    "room_type_kid's_room": "儿童房",
+    "room_type_balcony_room": "陽台",
+    "room_type_kid's_room": "兒童房",
     "room_type_custom_room": "自定义",
     "room_type_unassigned_room": "未分配",
-    "room_manage_device_key": "设备",
-    "room_manage_devices_key": "设备",
-    "add_rooms_for_floor": "为该楼层添加房间",
-    "add_floor_key": "增加楼层",
-    "edit_3d_room_key": "编辑3D房间",
+    "room_manage_device_key": "設備",
+    "room_manage_devices_key": "設備",
+    "add_rooms_for_floor": "添加該樓層的房間",
+    "add_floor_key": "新增樓層",
+    "edit_3d_room_key": "編輯 3d 房間",
     "select_devices_to_add": "选择要添加的设备",
     "select_devices_you_want_to_add": "选择你想添加到##的设备",
     "unassigned_devices": "未分配的设备",
-    "devices_in_other_rooms": "其他房间的设备",
-    "add_to_this_room": "添加到房间",
-    "select_room_for_more_detail": "选择房间了解更多详情",
-    "add_3d_rooms_key": "添加 3D 房间",
-    "select_room_to_edit": "选择要编辑的房间",
-    "drag_rooms_to_the_building_area": "将房间拖到建筑区域",
+    "devices_in_other_rooms": "其他房間的設備",
+    "add_to_this_room": "添加到房間",
+    "select_room_for_more_detail": "選擇房間了解更多詳情",
+    "add_3d_rooms_key": "新增 3D 房間",
+    "select_room_to_edit": "選擇要編輯的房間",
+    "drag_rooms_to_the_building_area": "將房間拖放到建築區域",
     "add_floor": "添加楼层？",
     "add_floor_tip_key": "当前设备将放置在一楼。您可以稍后移动它们。",
-    "select_rooms_in_your_home_key": "选择您家中的房间",
-    "how_many_rooms_in_this_floor_key": "您家中有多少个房间？",
-    "drag_and_drop_rooms": "拖放房间...",
-    "manage_3d_room_tip": "按下房间并将其拖动到正确的位置",
-    "room_type_key": "房间类型",
-    "select_room_type_for_existing_rooms": "选择现有房间的房型",
+    "select_rooms_in_your_home_key": "選擇您家中的房間",
+    "how_many_rooms_in_this_floor_key": "你的房子有幾個房間？",
+    "drag_and_drop_rooms": "拖放房間...",
+    "manage_3d_room_tip": "按住房間並將其拖曳到正確的位置",
+    "room_type_key": "房間类型",
+    "select_room_type_for_existing_rooms": "選擇現有房間的房型",
     "edit_device_key": "编辑设备",
-    "change_room_key": "变更房间",
-    "select_a_room": "选择房间",
-    "delete_room_key": "删除房间？",
-    "room_number_limit": "一层楼只能添加9个房间。",
-    "delete_room_tip": "删除此房间也会删除其对应的 3D 房间。与此房间关联的设备将移至设备页面上的“未分配”类别。",
-    "remove_device_tip": "从此房间移除的设备，它将被移动到设备页面中的“Unassinged”类别。",
-    "create_3d_rooms": "创建3D房间",
-    "3d_rooms_introduction": "随着此版本中 3D 房间的引入，您现在可以一目了然地轻松检查每个房间的空气状态。",
-    "select_floor": "选择楼层",
-    "add_new_room": "添加新房间",
+    "change_room_key": "变更房間",
+    "select_a_room": "選擇房間",
+    "delete_room_key": "刪除房間？",
+    "room_number_limit": "一層只能增加 9 個房間。",
+    "delete_room_tip": "刪除該房間也會刪除其對應的 3D ROOM。與該房間關聯的設備將移至設備頁面上的「未分配」類別。",
+    "remove_device_tip": "透過從該房間中刪除設備，它將被移至設備頁面中的「未分配」類別。",
+    "create_3d_rooms": "建立 3D 房間",
+    "3d_rooms_introduction": "此版本引入了3D房間，您現在可以輕鬆查看每個房間的空氣狀況，一目了然。",
+    "select_floor": "選擇樓層",
+    "add_new_room": "添加新房間",
     "click_to_add_device": "點擊底部的##按鈕以添加設備。",
     "troubleshooting": "疑难解答",
     "report_issue_normal": "报告问题",
@@ -3213,7 +3213,7 @@
     "adjust_brightness_tips": "調整設備顯示器的亮度。",
     "climate_control": "环境控制",
     "rooms_multi_key": "房間",
-    "devices_multi_key": "设备",
+    "devices_multi_key": "設備",
     "easy_view": "輕鬆查看",
     "easy_view_tips": "啟動後，裝置上的顯示文字將會更大且更易於閱讀。",
     "display_logotype": "显示标识",
@@ -3343,7 +3343,7 @@
     "send_notification": "傳送通知",
     "example:send_air_conditioner_is_on": "範例：傳送「空調已開啟」",
     "input_message_content._example:_no.3_air_conditioner_is_on": "輸入訊息內容。範例：3 號空調已開啟。",
-    "enter_your_room_name_key": "输入你的房间名",
+    "enter_your_room_name_key": "輸入您的房間名稱",
     "after_sale_report_failed_desc": "发生意外错误。请重试或联系售后服务。",
     "country_and_region": "国家/地区",
     "rf_ai": "智能",
@@ -4235,7 +4235,7 @@
     "CL_CF_FM_skip_to_library": "跳至圖書館",
     "sch_name": "調度者名稱",
     "h_use_air_care": "如何使用智能空净",
-    "h_manage_room": "如何管理你的房间",
+    "h_manage_room": "如何管理你的房間？",
     "h_select_preset_mode": "如何选择预设模式",
     "CL_CF_CP_monday": "週一",
     "CL_CF_CP_tuesday": "週二",
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "我們透過藍牙找到設備。選擇要配置的設備。",
     "pump_holiday_start_time_greater_one_day": "假日模式設置必須大於 1 天！",
     "CL_CF_FM_food_type": "食物類型",
-    "CL_CF_FM_add_food_from_lib": "從圖書館添加食物"
+    "CL_CF_FM_add_food_from_lib": "從圖書館添加食物",
+    "CL_CF_FM_items_check": "物品檢查",
+    "CL_CF_FM_items_check_desc": "請檢查是否需要修改食品訊息",
+    "CL_CF_FM_add_to_ref": "添加到冰箱",
+    "CL_CF_FM_food_name": "食品名稱",
+    "CL_CF_FM_store_date": "儲存日期",
+    "program_management_unable_to_hide": "無法隱藏",
+    "program_management_unable_to_hide_desc": "這是最後一個可見程序，並且至少有一個程序必須保持可見。",
+    "CL_CF_FM_set_deadline": "設定截止日期",
+    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日"
 }
