--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Намерихме устройства чрез bluetooth. Изберете вашето устройство за конфигуриране.",
     "pump_holiday_start_time_greater_one_day": "Настройката на режим “Ваканция” трябва да бъде повече от 1 ден!",
     "CL_CF_FM_food_type": "Тип храна",
-    "CL_CF_FM_add_food_from_lib": "Добавете храна от библиотеката"
+    "CL_CF_FM_add_food_from_lib": "Добавете храна от библиотеката",
+    "CL_CF_FM_items_check": "Проверка на елементи",
+    "CL_CF_FM_items_check_desc": "Моля, проверете дали е необходимо да промените информацията за храните",
+    "CL_CF_FM_add_to_ref": "Добавяне към хладилника",
+    "CL_CF_FM_food_name": "Име на храната",
+    "CL_CF_FM_store_date": "Дата на съхраняване",
+    "program_management_unable_to_hide": "Не може да се скрие",
+    "program_management_unable_to_hide_desc": "Това е последната видима програма и поне една програма трябва да остане видима.",
+    "CL_CF_FM_set_deadline": "Поставете краен срок",
+    "CL_CF_FM_expiry_date_must_be_selected": "Трябва да се избере срок на годност"
 }
