--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Vi fandt enheder via bluetooth. Vælg din enhed for at konfigurere.",
     "pump_holiday_start_time_greater_one_day": "Den indstillede ferietilstand skal være større end 1 dag!",
     "CL_CF_FM_food_type": "Fødevaretype",
-    "CL_CF_FM_add_food_from_lib": "Tilføj mad fra biblioteket"
+    "CL_CF_FM_add_food_from_lib": "Tilføj mad fra biblioteket",
+    "CL_CF_FM_items_check": "Varer Check",
+    "CL_CF_FM_items_check_desc": "Tjek venligst, om det er nødvendigt at ændre fødevareoplysninger",
+    "CL_CF_FM_add_to_ref": "Tilføj til køleskab",
+    "CL_CF_FM_food_name": "Mad navn",
+    "CL_CF_FM_store_date": "Butiksdato",
+    "program_management_unable_to_hide": "Kan ikke gemme sig",
+    "program_management_unable_to_hide_desc": "Dette er det sidste synlige program, og mindst ét ​​program skal holdes synligt.",
+    "CL_CF_FM_set_deadline": "Sæt en deadline",
+    "CL_CF_FM_expiry_date_must_be_selected": "Udløbsdato skal vælges"
 }
