--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "We found devices via bluetooth. Select your device to configure.",
     "pump_holiday_start_time_greater_one_day": "Holiday mode setting must be greater than 1 days",
     "CL_CF_FM_food_type": "Food Type",
-    "CL_CF_FM_add_food_from_lib": "Add Food From Library"
+    "CL_CF_FM_add_food_from_lib": "Add Food From Library",
+    "CL_CF_FM_items_check": "Items Check",
+    "CL_CF_FM_items_check_desc": "Please check if it is necessary to modify food information",
+    "CL_CF_FM_add_to_ref": "Add To Ref",
+    "CL_CF_FM_food_name": "Food Name",
+    "CL_CF_FM_store_date": "Store Date",
+    "program_management_unable_to_hide": "Unable to hide",
+    "program_management_unable_to_hide_desc": "This is the last visible program and at least one program must be kept visible.",
+    "CL_CF_FM_set_deadline": "Set a deadline",
+    "CL_CF_FM_expiry_date_must_be_selected": "Expiry date must be selected"
 }
