--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Encontramos dispositivos vía bluetooth. Seleccione su dispositivo para configurarlo.",
     "pump_holiday_start_time_greater_one_day": "El ajuste del modo Vacaciones debe ser de más de 1 día.",
     "CL_CF_FM_food_type": "Tipo de comida",
-    "CL_CF_FM_add_food_from_lib": "Agregar comida de la biblioteca"
+    "CL_CF_FM_add_food_from_lib": "Agregar comida de la biblioteca",
+    "CL_CF_FM_items_check": "Artículos a comprobar",
+    "CL_CF_FM_items_check_desc": "Por favor verifique si es necesario modificar la información de los alimentos",
+    "CL_CF_FM_add_to_ref": "Agregar al refrigerador",
+    "CL_CF_FM_food_name": "Nombre del alimento",
+    "CL_CF_FM_store_date": "Fecha de almacenamiento",
+    "program_management_unable_to_hide": "Incapaz de ocultarse",
+    "program_management_unable_to_hide_desc": "Este es el último programa visible y al menos un programa debe mantenerse visible.",
+    "CL_CF_FM_set_deadline": "Establezca una fecha límite",
+    "CL_CF_FM_expiry_date_must_be_selected": "Se debe seleccionar la fecha de caducidad"
 }
