--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -2237,7 +2237,7 @@
     "new_device_found_tips": "دستگاه جدیدی پیدا شد، برای اتصال دستگاه خود به شبکه، «Wi-Fi را تنظیم کنید» را انتخاب کنید.",
     "set_wifi_uppercase": "Wi-Fi را تنظیم کنید",
     "full": "تکمیل",
-    "usage_frequency_metrics": "usage_frequency_metrics",
+    "usage_frequency_metrics": "معیارهای فرکانس استفاده",
     "super_cool_upper_camel_case": "خنک کننده سریع",
     "super_freeze_upper_camel_case": "سوپر فریز",
     "input_password_cdc_tips": "رمز عبور باید 8 تا 20 کاراکتر باشد و حداقل شامل 1 عدد، 1 حرف بزرگ، 1 حرف کوچک و 1 کاراکتر خاص (#?!@$%^&*-) باشد.",
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "ما دستگاه ها را از طریق بلوتوث پیدا کردیم. دستگاه خود را برای پیکربندی انتخاب کنید.",
     "pump_holiday_start_time_greater_one_day": "تنظیم حالت تعطیلات باید بیشتر از 1 روز باشد!",
     "CL_CF_FM_food_type": "نوع غذا",
-    "CL_CF_FM_add_food_from_lib": "افزودن غذا از کتابخانه"
+    "CL_CF_FM_add_food_from_lib": "افزودن غذا از کتابخانه",
+    "CL_CF_FM_items_check": "بررسی موارد",
+    "CL_CF_FM_items_check_desc": "لطفاً بررسی کنید که آیا لازم است اطلاعات غذا را اصلاح کنید",
+    "CL_CF_FM_add_to_ref": "به یخچال اضافه کنید",
+    "CL_CF_FM_food_name": "نام غذا",
+    "CL_CF_FM_store_date": "تاریخ فروشگاه",
+    "program_management_unable_to_hide": "قادر به پنهان کردن نیست",
+    "program_management_unable_to_hide_desc": "این آخرین برنامه قابل مشاهده است و حداقل یک برنامه باید قابل مشاهده باشد.",
+    "CL_CF_FM_set_deadline": "یک ضرب الاجل تعیین کنید",
+    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود"
 }
