--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Pronašli smo uređaje putem bluetootha. Odaberite svoj uređaj za konfiguraciju.",
     "pump_holiday_start_time_greater_one_day": "Postavka načina rada za praznike mora biti veća od 1 dana!",
     "CL_CF_FM_food_type": "Vrsta hrane",
-    "CL_CF_FM_add_food_from_lib": "Dodajte hranu iz knjižnice"
+    "CL_CF_FM_add_food_from_lib": "Dodajte hranu iz knjižnice",
+    "CL_CF_FM_items_check": "Provjera stavki",
+    "CL_CF_FM_items_check_desc": "Provjerite je li potrebno mijenjati informacije o hrani",
+    "CL_CF_FM_add_to_ref": "Dodajte u hladnjak",
+    "CL_CF_FM_food_name": "Naziv hrane",
+    "CL_CF_FM_store_date": "Datum trgovine",
+    "program_management_unable_to_hide": "Ne mogu se sakriti",
+    "program_management_unable_to_hide_desc": "Ovo je zadnji vidljivi program i barem jedan program mora ostati vidljiv.",
+    "CL_CF_FM_set_deadline": "Odredite rok",
+    "CL_CF_FM_expiry_date_must_be_selected": "Mora biti odabran datum isteka"
 }
