--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Bluetoothon keresztül találtunk eszközöket. Válassza ki a konfigurálni kívánt eszközt.",
     "pump_holiday_start_time_greater_one_day": "Az üzemszünet mód beállításának hosszabbnak kell lennie, mint 1 nap!",
     "CL_CF_FM_food_type": "Élelmiszer típusa",
-    "CL_CF_FM_add_food_from_lib": "Élelmiszer hozzáadása a könyvtárból"
+    "CL_CF_FM_add_food_from_lib": "Élelmiszer hozzáadása a könyvtárból",
+    "CL_CF_FM_items_check": "Elemek ellenőrzése",
+    "CL_CF_FM_items_check_desc": "Kérjük, ellenőrizze, hogy szükséges-e módosítani az élelmiszerekkel kapcsolatos információkat",
+    "CL_CF_FM_add_to_ref": "Hozzáadás a hűtőhöz",
+    "CL_CF_FM_food_name": "Élelmiszer neve",
+    "CL_CF_FM_store_date": "Tárolás dátuma",
+    "program_management_unable_to_hide": "Képtelen elrejteni",
+    "program_management_unable_to_hide_desc": "Ez az utolsó látható program, és legalább egy programnak láthatónak kell lennie.",
+    "CL_CF_FM_set_deadline": "Állítson be határidőt",
+    "CL_CF_FM_expiry_date_must_be_selected": "A lejárati dátumot ki kell választani"
 }
