--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Bluetooth経由でデバイスが見つかりました。設定するデバイスを選択してください。",
     "pump_holiday_start_time_greater_one_day": "休日モード設定は1日以上である必要があります",
     "CL_CF_FM_food_type": "食品の種類",
-    "CL_CF_FM_add_food_from_lib": "ライブラリから食べ物を追加"
+    "CL_CF_FM_add_food_from_lib": "ライブラリから食べ物を追加",
+    "CL_CF_FM_items_check": "アイテムチェック",
+    "CL_CF_FM_items_check_desc": "食品情報の変更が必要かどうか確認してください",
+    "CL_CF_FM_add_to_ref": "冷蔵庫に追加",
+    "CL_CF_FM_food_name": "食品名",
+    "CL_CF_FM_store_date": "店舗日付",
+    "program_management_unable_to_hide": "隠すことができない",
+    "program_management_unable_to_hide_desc": "これは最後に表示されるプログラムであり、少なくとも 1 つのプログラムを表示したままにする必要があります。",
+    "CL_CF_FM_set_deadline": "期限を設定する",
+    "CL_CF_FM_expiry_date_must_be_selected": "有効期限を選択する必要があります"
 }
