--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "블루투스를 통해 장치를 찾았습니다. 구성할 장치를 선택하세요.",
     "pump_holiday_start_time_greater_one_day": "휴일 모드 설정은 1일보다 커야 합니다.",
     "CL_CF_FM_food_type": "음식 종류",
-    "CL_CF_FM_add_food_from_lib": "도서관에서 음식 추가"
+    "CL_CF_FM_add_food_from_lib": "도서관에서 음식 추가",
+    "CL_CF_FM_items_check": "항목 확인",
+    "CL_CF_FM_items_check_desc": "식품정보 수정이 필요한지 확인해주세요.",
+    "CL_CF_FM_add_to_ref": "냉장고에 추가",
+    "CL_CF_FM_food_name": "음식 이름",
+    "CL_CF_FM_store_date": "저장 날짜",
+    "program_management_unable_to_hide": "숨길 수 없습니다",
+    "program_management_unable_to_hide_desc": "이것은 마지막으로 볼 수 있는 프로그램이며 적어도 하나의 프로그램은 계속 보여야 합니다.",
+    "CL_CF_FM_set_deadline": "마감일을 정하다",
+    "CL_CF_FM_expiry_date_must_be_selected": "유효기간을 선택해야 합니다."
 }
