--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Најдовме уреди преку bluetooth. Изберете го вашиот уред за конфигурирање.",
     "pump_holiday_start_time_greater_one_day": "Поставката за режим за одмор мора да биде поголема од 1 ден!",
     "CL_CF_FM_food_type": "Тип на храна",
-    "CL_CF_FM_add_food_from_lib": "Додадете храна од библиотеката"
+    "CL_CF_FM_add_food_from_lib": "Додадете храна од библиотеката",
+    "CL_CF_FM_items_check": "Ставки Проверете",
+    "CL_CF_FM_items_check_desc": "Ве молиме проверете дали е неопходно да се менуваат информациите за храната",
+    "CL_CF_FM_add_to_ref": "Додај во фрижидер",
+    "CL_CF_FM_food_name": "Име на храна",
+    "CL_CF_FM_store_date": "Датум на продавница",
+    "program_management_unable_to_hide": "Не може да се сокрие",
+    "program_management_unable_to_hide_desc": "Ова е последната видлива програма и барем една програма мора да биде видлива.",
+    "CL_CF_FM_set_deadline": "Поставете краен рок",
+    "CL_CF_FM_expiry_date_must_be_selected": "Мора да се избере датумот на истекување"
 }
