--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "We hebben apparaten gevonden via bluetooth. Selecteer uw apparaat om te configureren.",
     "pump_holiday_start_time_greater_one_day": "De vakantiemodusinstelling moet langer zijn dan 1 dag!",
     "CL_CF_FM_food_type": "Voedselsoort",
-    "CL_CF_FM_add_food_from_lib": "Voeg voedsel toe vanuit de bibliotheek"
+    "CL_CF_FM_add_food_from_lib": "Voeg voedsel toe vanuit de bibliotheek",
+    "CL_CF_FM_items_check": "Artikelen controleren",
+    "CL_CF_FM_items_check_desc": "Controleer of het nodig is om de voedingsinformatie aan te passen",
+    "CL_CF_FM_add_to_ref": "Toevoegen aan koelkast",
+    "CL_CF_FM_food_name": "Voedselnaam",
+    "CL_CF_FM_store_date": "Bewaardatum",
+    "program_management_unable_to_hide": "Kan niet verbergen",
+    "program_management_unable_to_hide_desc": "Dit is het laatste zichtbare programma. Er moet minimaal één programma zichtbaar blijven.",
+    "CL_CF_FM_set_deadline": "Stel een deadline in",
+    "CL_CF_FM_expiry_date_must_be_selected": "Vervaldatum moet worden geselecteerd"
 }
