--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Am găsit dispozitive prin bluetooth. Selectați dispozitivul de configurat.",
     "pump_holiday_start_time_greater_one_day": "Setarea modului Vacanță trebuie să fie mai mare de o zi!",
     "CL_CF_FM_food_type": "Tip alimentar",
-    "CL_CF_FM_add_food_from_lib": "Adăugați alimente din bibliotecă"
+    "CL_CF_FM_add_food_from_lib": "Adăugați alimente din bibliotecă",
+    "CL_CF_FM_items_check": "Verificare articole",
+    "CL_CF_FM_items_check_desc": "Vă rugăm să verificați dacă este necesar să modificați informațiile despre alimente",
+    "CL_CF_FM_add_to_ref": "Adăugați la frigider",
+    "CL_CF_FM_food_name": "Numele alimentului",
+    "CL_CF_FM_store_date": "Data stocării",
+    "program_management_unable_to_hide": "Nu se poate ascunde",
+    "program_management_unable_to_hide_desc": "Acesta este ultimul program vizibil și cel puțin un program trebuie menținut vizibil.",
+    "CL_CF_FM_set_deadline": "Stabiliți un termen limită",
+    "CL_CF_FM_expiry_date_must_be_selected": "Trebuie selectată data de expirare"
 }
