--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Мы нашли устройства через Bluetooth. Выберите устройство для настройки.",
     "pump_holiday_start_time_greater_one_day": "Длительность режима «Отпуск» должна быть больше одного дня!",
     "CL_CF_FM_food_type": "Тип еды",
-    "CL_CF_FM_add_food_from_lib": "Добавить еду из библиотеки"
+    "CL_CF_FM_add_food_from_lib": "Добавить еду из библиотеки",
+    "CL_CF_FM_items_check": "Проверить элементы",
+    "CL_CF_FM_items_check_desc": "Проверьте, необходимо ли изменить информацию о продуктах питания.",
+    "CL_CF_FM_add_to_ref": "Добавить в холодильник",
+    "CL_CF_FM_food_name": "Название еды",
+    "CL_CF_FM_store_date": "Дата хранения",
+    "program_management_unable_to_hide": "Невозможно скрыть",
+    "program_management_unable_to_hide_desc": "Это последняя видимая программа, и по крайней мере одна программа должна быть видна.",
+    "CL_CF_FM_set_deadline": "Установите крайний срок",
+    "CL_CF_FM_expiry_date_must_be_selected": "Необходимо выбрать дату истечения срока действия."
 }
