--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4258,5 +4258,14 @@
     "CL_CF_CS_ble_scan_have_found": "Naprave smo našli prek bluetootha. Izberite svojo napravo za konfiguracijo.",
     "pump_holiday_start_time_greater_one_day": "Dopustniški način mora trajati dlje kot 1 dan!",
     "CL_CF_FM_food_type": "Vrsta hrane",
-    "CL_CF_FM_add_food_from_lib": "Dodajte hrano iz knjižnice"
+    "CL_CF_FM_add_food_from_lib": "Dodajte hrano iz knjižnice",
+    "CL_CF_FM_items_check": "Preverjanje predmetov",
+    "CL_CF_FM_items_check_desc": "Preverite, ali je treba spremeniti informacije o hrani",
+    "CL_CF_FM_add_to_ref": "Dodaj v hladilnik",
+    "CL_CF_FM_food_name": "Ime hrane",
+    "CL_CF_FM_store_date": "Datum shranjevanja",
+    "program_management_unable_to_hide": "Ni mogoče skriti",
+    "program_management_unable_to_hide_desc": "To je zadnji viden program in vsaj en program mora ostati viden.",
+    "CL_CF_FM_set_deadline": "Določite rok",
+    "CL_CF_FM_expiry_date_must_be_selected": "Izbrati je treba datum poteka"
 }
